feat(sass/scss): sass 7-1 integration

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,8 @@ public/
 
 # End of https://www.gitignore.io/api/git,node,sass
 
+# Project-specific
+!stylesheets/ie.css
+!stylesheets/print.css
+!stylesheets/screen.css
+
