--- a/package.json
+++ b/package.json
@@ -1,6 +1,49 @@
 {
+  "name": "okada-microsite-2019",
+  "version": "0.1.0",
+  "description": "Basic Child Theme for UnderStrap Theme Framework: https://github.com/holger1411/understrap",
+  "main": "index.js",
+  "scripts": {
+    "postinstall": "cp gulpconfig.json.sample gulpconfig.json && gulp copy-assets"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://johncyrill@bitbucket.org/gorated/okada-microsite-2019.git"
+  },
+  "keywords": [
+    "microsite",
+    "bootstrap",
+    "underscores"
+  ],
+  "author": "John Cyrill Corsanes",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://bitbucket.org/gorated/okada-microsite-2019"
+  },
+  "homepage": "https://gorated.ph",
   "devDependencies": {
-    "cz-conventional-changelog": "3.0.2"
+    "animate.css": "^3.7.2",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "bootstrap": "^4.3.1",
+    "browser-sync": "^2.26.7",
+    "cz-conventional-changelog": "3.0.2",
+    "dotenv": "^8.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect-php": "^1.0.3",
+    "gulp-csso": "^3.0.1",
+    "gulp-less": "^4.0.1",
+    "gulp-livereload": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "merge-stream": "^2.0.0",
+    "node-sass": "^4.12.0",
+    "undescores-for-npm": "^1.0.0",
+    "wowjs": "^1.1.3"
   },
   "config": {
     "commitizen": {
