refactor(all): huge Refactor based on gulpfile.js
BREAKING CHANGE: Gulp Errors

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "okada-microsite-2019",
   "version": "0.1.0",
-  "description": "Basic Child Theme for UnderStrap Theme Framework: https://github.com/holger1411/understrap",
-  "main": "index.js",
+  "description": "New Year's Eve microsite for Okada Manila (2019)",
+  "main": "index.html",
   "scripts": {
     "postinstall": "cp gulpconfig.json.sample gulpconfig.json && gulp copy-assets"
   },
@@ -22,26 +22,47 @@
   },
   "homepage": "https://gorated.ph",
   "devDependencies": {
-    "animate.css": "^3.7.2",
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.7",
     "cz-conventional-changelog": "3.0.2",
+    "del": "^4.1.0",
     "dotenv": "^8.1.0",
+    "edit-json-file": "^1.3.1",
+    "font-awesome": "^4.7.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.0.0",
+    "gulp-clone": "^2.0.1",
+    "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
-    "gulp-connect-php": "^1.0.3",
+    "gulp-cssnano": "^2.1.3",
     "gulp-csso": "^3.0.1",
+    "gulp-eslint": "^6.0.0",
+    "gulp-ignore": "^2.0.2",
+    "gulp-imagemin": "^5.0.3",
     "gulp-less": "^4.0.1",
     "gulp-livereload": "^4.0.1",
+    "gulp-merge": "^0.1.1",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-rimraf": "^0.2.2",
     "gulp-sass": "^4.0.2",
+    "gulp-sass-lint": "^1.4.0",
+    "gulp-sequence": "^1.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
+    "gulp-watch": "^5.0.1",
+    "htmlhint": "^0.11.0",
     "merge-stream": "^2.0.0",
+    "merge2": "^1.2.3",
     "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
+    "run-sequence": "^2.2.1",
     "undescores-for-npm": "^1.0.0",
     "wowjs": "^1.1.3"
   },
