--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,7 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
-image: starefossen/ruby-node:latest
+image: timbru31/ruby-node:latest
 
 pipelines:
   default:
