fix(gulp): bootstrap 4 copied to wrong directory

--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,16 @@ public/
 
 # End of https://www.gitignore.io/api/git,node,sass
 
+# Gulp
+gulpconfig.json
+
+# Ignore specific
+!**/**/.gitinclude
+scripts/
+stylesheets/
+fonts/
+**/**/vendors/
+
 # Project-specific
 !stylesheets/ie.css
 !stylesheets/print.css
