--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "del": "^4.1.0",
     "dotenv": "^8.1.0",
     "edit-json-file": "^1.3.1",
+    "eslint-config-jquery": "^2.0.0",
     "font-awesome": "^4.7.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
