--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "New Year's Eve microsite for Okada Manila (2019)",
   "main": "index.html",
   "scripts": {
-    "postinstall": "cp gulpconfig.json.sample gulpconfig.json && gulp copy-assets && sh note.sh"
+    "postinstall": "cp gulpconfig.json.sample gulpconfig.json && gulp copy-assets"
   },
   "repository": {
     "type": "git",
@@ -38,7 +38,6 @@
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.0.0",
     "gulp-clone": "^2.0.1",
-    "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-csso": "^3.0.1",
