--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,7 +11,7 @@ pipelines:
         caches:
           - node
         script: # Modify the commands below to build your repository.
-          - gem install compass
+          - node -v
           - npm install -g yarn
           - npm install -g gulp
           - yarn install
