improvement(gulp, eslint, moment): added moment-countdown for momentjs

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,5 +12,9 @@
     "commonjs": true,
     "jquery": true
   },
-  "extends": "jquery"
+  "globals": {
+    "jquery": true,
+    "moment": true
+  },
+  "extends": ["jquery"]
 }
