--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "htmlhint": "^0.11.0",
     "merge-stream": "^2.0.0",
     "merge2": "^1.2.3",
+    "moment": "^2.24.0",
+    "moment-countdown": "^0.0.3",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "run-sequence": "^2.2.1",
