--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.7",
+    "countdown": "^2.6.0",
     "cz-conventional-changelog": "3.0.2",
     "del": "^4.1.0",
     "dotenv": "^8.1.0",
@@ -61,7 +62,6 @@
     "merge-stream": "^2.0.0",
     "merge2": "^1.2.3",
     "moment": "^2.24.0",
-    "moment-countdown": "^0.0.3",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "run-sequence": "^2.2.1",
