build(eslint): added countdown js to globals

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
   },
   "globals": {
     "jquery": true,
-    "moment": true
+    "moment": true,
+    "countdown": true
   },
   "extends": ["jquery"]
 }
