feat(wow, animation): wow.js test with anti flickering

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
   "globals": {
     "jquery": true,
     "moment": true,
-    "countdown": true
+    "countdown": true,
+    "WOW": true
   },
   "extends": ["jquery"]
 }
