feat(swiper, the-restaurants): swiper plugin initial integration

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "run-sequence": "^2.2.1",
+    "swiper": "^5.2.1",
     "undescores-for-npm": "^1.0.0",
     "wowjs": "^1.1.3"
   },
