refactor(github, index): adjustments after initial test

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,6 +25,7 @@ jobs:
           npm install -g yarn
           npm install -g gulp
           yarn install
+          gulp copy-assets
           gulp setup
           gulp dist
       - name: Test ZIP Build 🔧
